ajout des bons endpoins
