# swagger/spring-server/src/main/java/io/lozzikit/discussions/api/endpoints/CommentsApiController.java
@@ -12,8 +12,10 @@ import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import javax.validation.constraints.NotNull;
+import java.net.URI;
 import java.util.List;
 
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-07-26T19:36:34.802Z")
@@ -32,6 +34,12 @@ public class CommentsApiController implements CommentsApi {
     }
 
     @Override
+    public ResponseEntity<CommentResponse> commentsIdGet(@ApiParam(value = "ID of the comment we want to retrive.", required = true) @PathVariable("id") Integer id,
+                                                  @NotNull @ApiParam(value = "The articleID the user want to list comment from", required = true) @RequestParam(value = "articleID", required = true) Long articleID){
+        return ResponseEntity.ok(new CommentResponse());
+    }
+
+    @Override
     public ResponseEntity<Void> commentsIdDelete(@ApiParam(value = "ID of the comment we want to delete", required = true) @PathVariable("id") Long id) {
         if (!commentService.commentExist(id)) {
             return new ResponseEntity<Void>(HttpStatus.NOT_FOUND);
@@ -43,28 +51,36 @@ public class CommentsApiController implements CommentsApi {
     }
 
     @Override
-    public ResponseEntity<CommentResponse> commentsIdPut(@ApiParam(value = "ID of the comment we want to edit.", required = true) @PathVariable("id") Long id,
-                                                         @ApiParam(value = "The comment the user want to post", required = true) @RequestBody CommentRequest comment) {
+    public ResponseEntity<Object> commentsIdPut(@ApiParam(value = "ID of the comment we want to edit.", required = true) @PathVariable("id") Long id,
+                                                @ApiParam(value = "The comment the user want to post", required = true) @RequestBody CommentRequest comment) {
         if (!commentService.commentExist(id)) {
-            return new ResponseEntity<CommentResponse>(HttpStatus.NOT_FOUND);
+            return new ResponseEntity<Object>(HttpStatus.NOT_FOUND);
         }
         if (!commentService.containsMessage(comment)) {
-            return new ResponseEntity<CommentResponse>(HttpStatus.NOT_FOUND);
+            return new ResponseEntity<Object>(HttpStatus.NOT_FOUND);
         }
 
-        commentService.updateComment(id, comment);
+        long commentId = commentService.updateComment(id, comment);
 
-        return new ResponseEntity<CommentResponse>(HttpStatus.OK);
+        URI location = ServletUriComponentsBuilder
+                .fromCurrentRequest().path("/{id}")
+                .buildAndExpand(commentId).toUri();
+
+        return ResponseEntity.created(location).build();
     }
 
     @Override
-    public ResponseEntity<Void> commentsPost(@ApiParam(value = "The comment the user want to post", required = true) @RequestBody CommentRequest comment) {
+    public ResponseEntity<Object> commentsPost(@ApiParam(value = "The comment the user want to post", required = true) @RequestBody CommentRequest comment) {
         if (!commentService.containsMessage(comment)) {
-            return new ResponseEntity<Void>(HttpStatus.UNPROCESSABLE_ENTITY);
+            return new ResponseEntity<Object>(HttpStatus.UNPROCESSABLE_ENTITY);
         }
 
-        commentService.addNewComments(comment);
+        long commentID = commentService.addNewComments(comment);
 
-        return new ResponseEntity<Void>(HttpStatus.CREATED);
+        URI location = ServletUriComponentsBuilder
+                .fromCurrentRequest().path("/{id}")
+                .buildAndExpand(commentID).toUri();
+
+        return ResponseEntity.created(location).build();
     }
 }
